--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<1DOCTYPE html>
+<!DOCTYPE html>
     <html>
-      <header>
+      <head>
     <meta http-equiv="Content-Type" content="text/html; charest=utf-8">
-    <h1>Understanding CSS: Selector Specificity</h1>
+    <title>Understanding CSS: Selector Specificity</title>
         <link rel="stylesheet" type="text/css" herf="reset.css">
         <link rel="stylesheet" type="text/css" herf="style.css">
-     <p> Daniel Eden   |   Aug 7</p>
-    </header>
+   
+    </head>
 
 <section>
 <p> me throw you a scenario you may be very familiar with.</p>
