--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
       <head>
     <meta http-equiv="Content-Type" content="text/html; charest=utf-8">
     <title>Understanding CSS: Selector Specificity</title>
-        <link rel="stylesheet" type="text/css" herf="reset.css">
-        <link rel="stylesheet" type="text/css" herf="style.css">
+        <link rel="stylesheet" type="text/css" href="reset.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
    
     </head>
-
+<body>
+  <header>
+		<h1>Understanding CSS: Selector Specificity</h1>
+		<p>Daniel Eden   |   Aug 7</p>
+	</header>
 <section>
 <p> me throw you a scenario you may be very familiar with.</p>
 
